SERVER-5819: implement FileAllocator on Windows to prevent FlushViewOfFiles failures